# mul_database

./: .gitignore  CMakeLists.txt  README.md  build.sh  dev.md
output/include/: out_type_defs.h  outfunction.h
scripts/: env.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_connect.c  client_dealcalc.c  client_main.c  client_simple_relation.c
src/client/include/: client_common.h
src/common/: CMakeLists.txt  kv_json.c  kv_map.c  kv_memory.c  log.c  seri_utils.c  stl.c  vector_util.c
src/common/include/: common.h  db_list.h  db_memctx.h  kv_json.h  kv_map.h  kv_memory.h  log.h  seri_utils.h  vector_util.h
src/common/memctx/: memctx_main.c
src/datamodel/: CMakeLists.txt
src/datamodel/simple_relation/: spr_common.h  spr_db.c  spr_label.c  spr_manager.c  spr_opcode.c
src/datamodel/simple_relation/include/: spr_common.h
src/exector/: CMakeLists.txt  ee_opcode.c
src/exector/include/: ee_common.h  ee_out_function.h
src/interface/: CMakeLists.txt  outfunction.c
src/interface/include/: out_type_defs.h  outfunction.h
src/main/: CMakeLists.txt  server_main.c
src/runtime/: CMakeLists.txt  main_worker.c  rt_handle_opcode.c  rt_parse_request.c
src/runtime/include/: main_worker.h
src/storage/: CMakeLists.txt  se_heap.c  se_page_ctrl.c
src/storage/include/: se_common.h  se_out_function.h
test/: CMakeLists.txt  build.sh  clear.sh  debug.sh  innerbuild.sh  kv-test  main  main.cc  rc.sh  test_common.cc  test_common.h
test/sdv/00_calc_test/: 00_calc.cc
test/sdv/01_simple_test/: 01_simple_json_test.cc  01_simple_test.cc
test/sdv/01_simple_test/schema/: label1.json  label2.json
test/sdv/tmp/: epoll_test.cc  socket_test.cc  utils_vector.cc
test/sdv/tmp/sockettmp/: client  client.c  server  server.c
